--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -38,7 +42,7 @@ nav ul li {
   margin: 0.2em;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -46,4 +50,4 @@ nav ul li {
     color: white;
     background: black;
   }
-}
+} */
